# global-components

components/ClockServer/include/plat/bcm2711/plat/: clock.h
components/GPIOMUXServer/include/plat/bcm2711/plat/: gpio.h  mux.h
components/ResetServer/include/plat/bcm2711/plat/: reset.h
components/SerialServer/: CMakeLists.txt  SerialServer.camkes
components/SerialServer/include/plat/bcm2711/plat/: serial.h
components/TimeServer/include/plat/bcm2711/plat/: timers.h
templates/: seL4SharedDataWithCaps.template.c
